// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`genGetConfig given: [case1] typed config with secrets when: [t0] getConfig() is called then: config matches snapshot 1`] = `
{
  "api": {
    "key": "secret:/shared/api/key",
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "param:/test-org/test-svc/test/database.password",
    "port": 5432,
  },
}
`;

exports[`genGetConfig given: [case2] static config sync when: [t0] getConfig.static() is called then: static config matches snapshot 1`] = `
{
  "api": {
    "key": "$.at(aws::secret/shared/api/key)",
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "$.at(aws::param)",
    "port": 5432,
  },
  "organization": "test-org",
  "repository": "test-svc",
}
`;

exports[`genGetConfig given: [case3] validation by environment - test env fails fast when: [t0] schema mismatch in test env then: throws BadRequestError 1`] = `
"BadRequestError: config validation failed

{
  "errors": "database.required_field: Invalid input: expected string, received undefined",
  "environment": {
    "config": "test",
    "server": "local@unix"
  },
  "hint": "fix config to match schema"
}"
`;

exports[`genGetConfig given: [case4] auto-derive paths when: [t0] placeholder without explicit path then: config matches snapshot 1`] = `
{
  "api": {
    "key": "secret:/shared/api/key",
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "param:/test-org/test-svc/test/database.password",
    "port": 5432,
  },
}
`;

exports[`genGetConfig given: [case5] explicit paths when: [t0] placeholder with explicit path then: config matches snapshot 1`] = `
{
  "api": {
    "key": "secret:/shared/api/key",
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "param:/test-org/test-svc/test/database.password",
    "port": 5432,
  },
}
`;

exports[`genGetConfig given: [case6] unknown supplier when: [t0] config uses scheme without registered supplier then: throws BadRequestError 1`] = `
"BadRequestError: unknown scheme

{
  "scheme": "aws::param",
  "raw": "$.at(aws::param)",
  "hint": "no supplier registered for scheme 'aws::param'. available: none"
}"
`;

exports[`genGetConfig given: [case9] multiple suppliers when: [t0] config uses both aws::param and aws::secret then: config matches snapshot 1`] = `
{
  "api": {
    "key": "secret:/shared/api/key",
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "param:/test-org/test-svc/test/database.password",
    "port": 5432,
  },
}
`;

exports[`genGetConfig given: [case10] file selection by environment when: [t0] environment is prod then: selects prod.json5 config file 1`] = `
{
  "api": {
    "key": "$.at(aws::secret)",
    "url": "https://api.example.com",
  },
  "database": {
    "host": "db.prod.example.com",
    "password": "$.at(aws::param)",
    "port": 5432,
  },
  "organization": "test-org",
  "repository": "test-svc",
}
`;

exports[`genGetConfig given: [case11] prod/cloud environment with schema mismatch when: [t0] schema mismatch in prod/cloud env then: warns but returns config anyway 1`] = `
{
  "api": {
    "key": "secret:/test-org/test-svc/prod/api.key",
    "url": "https://api.example.com",
  },
  "database": {
    "host": "db.prod.example.com",
    "password": "param:/test-org/test-svc/prod/database.password",
    "port": 5432,
  },
  "organization": "test-org",
  "repository": "test-svc",
}
`;

exports[`genGetConfig given: [case12] config files not found when: [t0] statics glob matches no files then: getConfig() throws BadRequestError 1`] = `
"BadRequestError: no config files found

{
  "statics": "<cwd>/src/.test/assets/config/*.nonexistent",
  "hint": "check glob pattern matches config files"
}"
`;

exports[`genGetConfig given: [case12] config files not found when: [t0] statics glob matches no files then: getConfig.static() throws BadRequestError 1`] = `
"BadRequestError: no config files found

{
  "statics": "<cwd>/src/.test/assets/config/*.nonexistent",
  "hint": "check glob pattern matches config files"
}"
`;

exports[`genGetConfig given: [case13] optional field denied — tolerated, key omitted when: [t0] getConfig() is called then: the resolved config matches snapshot 1`] = `
{
  "api": {
    "key": undefined,
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "param:/test-org/test-svc/test/database.password",
    "port": 5432,
  },
}
`;

exports[`genGetConfig given: [case14] required field denied — hard throw (failfast env) when: [t0] getConfig() is called then: throws BadRequestError with the denied path 1`] = `
{
  "blockers": [
    {
      "cause": Any<SupplyError>,
      "key": {
        "path": "api.key",
      },
      "reason": "denied",
      "verdict": "block",
    },
  ],
  "environment": SdkConfigEnvironment {
    "config": "test",
    "server": "local@unix",
  },
  "errors": "api.key: Invalid input: expected string, received undefined",
  "hint": "if a key was 'denied', the env was detected to explicitly lack privs to read it — grant it access or mark the field .optional()/.nullish() to tolerate the miss. if a key was 'absent', the source had no value at that path — decide whether to set it or mark the field .optional()/.nullish(). each blocker's cause carries the supplier error behind the miss",
}
`;

exports[`genGetConfig given: [case15] required field denied — hard throw even in prod/cloud when: [t0] getConfig() is called in prod/cloud then: throws hard (does not warn-and-continue) 1`] = `
{
  "blockers": [
    {
      "cause": Any<SupplyError>,
      "key": {
        "path": "api.key",
      },
      "reason": "denied",
      "verdict": "block",
    },
  ],
  "environment": SdkConfigEnvironment {
    "config": "prod",
    "server": "cloud@aws.lambda",
  },
  "errors": "api.key: Invalid input: expected string, received undefined",
  "hint": "if a key was 'denied', the env was detected to explicitly lack privs to read it — grant it access or mark the field .optional()/.nullish() to tolerate the miss. if a key was 'absent', the source had no value at that path — decide whether to set it or mark the field .optional()/.nullish(). each blocker's cause carries the supplier error behind the miss",
}
`;

exports[`genGetConfig given: [case16] denied required leaf under an optional ancestor — hard-throws when: [t0] getConfig() is called then: throws — ancestor-optional does not tolerate a denied leaf 1`] = `
{
  "blockers": [
    {
      "cause": Any<SupplyError>,
      "key": {
        "path": "api.key",
      },
      "reason": "denied",
      "verdict": "block",
    },
  ],
  "environment": SdkConfigEnvironment {
    "config": "test",
    "server": "local@unix",
  },
  "errors": "api.key: Invalid input: expected string, received undefined",
  "hint": "if a key was 'denied', the env was detected to explicitly lack privs to read it — grant it access or mark the field .optional()/.nullish() to tolerate the miss. if a key was 'absent', the source had no value at that path — decide whether to set it or mark the field .optional()/.nullish(). each blocker's cause carries the supplier error behind the miss",
}
`;

exports[`genGetConfig given: [case17] denied nullable-only field — hard-throws when: [t0] getConfig() is called then: throws — nullable-only is required-present, undefined rejected 1`] = `
{
  "blockers": [
    {
      "cause": Any<SupplyError>,
      "key": {
        "path": "api.key",
      },
      "reason": "denied",
      "verdict": "block",
    },
  ],
  "environment": SdkConfigEnvironment {
    "config": "test",
    "server": "local@unix",
  },
  "errors": "api.key: Invalid input: expected string, received undefined",
  "hint": "if a key was 'denied', the env was detected to explicitly lack privs to read it — grant it access or mark the field .optional()/.nullish() to tolerate the miss. if a key was 'absent', the source had no value at that path — decide whether to set it or mark the field .optional()/.nullish(). each blocker's cause carries the supplier error behind the miss",
}
`;

exports[`genGetConfig given: [case18] optional field with a default, denied — default applies when: [t0] getConfig() is called then: the resolved config matches snapshot 1`] = `
{
  "api": {
    "key": "fallback-key",
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "param:/test-org/test-svc/test/database.password",
    "port": 5432,
  },
}
`;

exports[`genGetConfig given: [case19] nullish field denied — omitted (undefined tolerated) when: [t0] getConfig() is called then: the resolved config matches snapshot 1`] = `
{
  "api": {
    "key": undefined,
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "param:/test-org/test-svc/test/database.password",
    "port": 5432,
  },
}
`;

exports[`genGetConfig given: [case20] optional field absent (not-found) — tolerated, omitted when: [t0] getConfig() is called then: the resolved config matches snapshot 1`] = `
{
  "api": {
    "key": undefined,
    "url": "https://api.test.example.com",
  },
  "database": {
    "host": "localhost",
    "password": "param:/test-org/test-svc/test/database.password",
    "port": 5432,
  },
}
`;

exports[`genGetConfig given: [case23] two required paths denied at once — both aggregate into one throw when: [t0] getConfig() is called then: throws BadRequestError that names both denied paths 1`] = `
{
  "blockers": [
    {
      "cause": Any<SupplyError>,
      "key": {
        "path": "database.password",
      },
      "reason": "denied",
      "verdict": "block",
    },
    {
      "cause": Any<SupplyError>,
      "key": {
        "path": "api.key",
      },
      "reason": "denied",
      "verdict": "block",
    },
  ],
  "environment": SdkConfigEnvironment {
    "config": "test",
    "server": "local@unix",
  },
  "errors": "database.password: Invalid input: expected string, received undefined; api.key: Invalid input: expected string, received undefined",
  "hint": "if a key was 'denied', the env was detected to explicitly lack privs to read it — grant it access or mark the field .optional()/.nullish() to tolerate the miss. if a key was 'absent', the source had no value at that path — decide whether to set it or mark the field .optional()/.nullish(). each blocker's cause carries the supplier error behind the miss",
}
`;

exports[`genGetConfig given: [case25] denied-required alongside unrelated schema drift when: [t0] getConfig() is called then: does not mis-attribute the drift as a denial 1`] = `
{
  "blockers": [
    {
      "cause": Any<SupplyError>,
      "key": {
        "path": "api.key",
      },
      "reason": "denied",
      "verdict": "block",
    },
  ],
  "environment": SdkConfigEnvironment {
    "config": "test",
    "server": "local@unix",
  },
  "errors": "database.extra_field: Invalid input: expected string, received undefined; api.key: Invalid input: expected string, received undefined",
  "hint": "if a key was 'denied', the env was detected to explicitly lack privs to read it — grant it access or mark the field .optional()/.nullish() to tolerate the miss. if a key was 'absent', the source had no value at that path — decide whether to set it or mark the field .optional()/.nullish(). each blocker's cause carries the supplier error behind the miss",
}
`;

exports[`genGetConfig given: [case27] two orgs, one repo name — the collision is barred when: [t0] each declares its own org, in its own config then: and the two NAMESPACES are pinned, side by side 1`] = `
{
  "orgA": [
    "/test-org/test-svc/test/database.password",
  ],
  "orgB": [
    "/org-of-test/test-svc/test/database.password",
  ],
}
`;

exports[`genGetConfig given: [case28] a config with no organization refuses to boot when: [t0] the config declares none then: the SENTENCE a config author reads is pinned, here 1`] = `
"BadRequestError: config lacks a required \`organization\` field

{
  "hint": "every sdk-config consumer must declare a top-level \`organization\` — it becomes the first segment of every auto-derived path, so two orgs' repos of the same name cannot collide in one param store. it is required even where every uri is explicit: the field is read on every load, so the day someone adds one bare \`$.at()\` it cannot silently derive an un-namespaced path. add \`\\"organization\\": \\"your-org\\"\` to the config. to opt a repo out of a shared namespace, declare a placeholder such as \`\\"organization\\": \\"_\\"\` — there is no way to derive without one"
}"
`;

exports[`genGetConfig given: [case28] a config with no organization refuses to boot when: [t4] a MALFORMED org, and every uri is explicit — vision case=4 [t2] then: it throws — the org is VALIDATED, derive or no derive 1`] = `
"BadRequestError: org cannot be a placeholder

{
  "source": "the \`organization\` field declared in the config",
  "declared": "$.at(aws::param/org)",
  "hint": "the \`organization\` field declared in the config must hold a literal value, never a $.at() placeholder. the org is read before any supplier runs — it is what decides the path a supplier reads — so it cannot itself be supplied. declare the literal"
}"
`;

exports[`genGetConfig given: [case28] a config with no organization refuses to boot when: [t5] the org is declared as a MAP, not a literal then: the SENTENCE a config author reads is pinned, here 1`] = `
"BadRequestError: org must be a literal string

{
  "source": "the \`organization\` field declared in the config",
  "declared": {
    "name": "ahbode"
  },
  "declaredType": "object",
  "hint": "the \`organization\` field declared in the config must hold a literal string, such as \\"ahbode\\". a placeholder is not filled here — the org is read before any supplier runs, so it cannot itself be supplied"
}"
`;

exports[`genGetConfig given: [case28] a config with no organization refuses to boot when: [t6] the org is a BLANK string — whitespace only then: the SENTENCE a config author reads is pinned, here 1`] = `
"BadRequestError: org is empty

{
  "source": "the \`organization\` field declared in the config",
  "declared": "   ",
  "hint": "the \`organization\` field declared in the config must hold a non-empty value. to opt a repo out of a shared namespace, declare a placeholder such as \\"_\\" — an empty org would splice a blank segment and derive an unreachable path"
}"
`;

exports[`genGetConfig given: [case32] the repo has TWO declared sources, and no argument when: [t3] the declared \`repository\` is whitespace only then: the refusal is snapped at the surface a caller meets 1`] = `
"BadRequestError: repo is empty

{
  "source": "the \`repository\` field declared in the config",
  "declared": "   ",
  "hint": "the \`repository\` field declared in the config must hold a non-empty value — an empty repo would splice a blank segment and derive an unreachable path"
}"
`;
